fix(top-items): remove image margin on mobile breakpoint

--- a/components/UserTopItems/userTopItems.module.scss
+++ b/components/UserTopItems/userTopItems.module.scss
@@ -65,6 +65,7 @@
     @media only screen and (max-width: $sm) {
       width: 90px;
       height: 90px;
+      margin-right: 0;
     }
   }
 }
